Fix pagination contrast.

--- a/sass/components/pagination/_resources-pagination.scss
+++ b/sass/components/pagination/_resources-pagination.scss
@@ -44,7 +44,6 @@
     }
 
     .row-count {
-        color: $color__secondary-text;
         font-size: $font__sm-size;
         margin-right: 1rem;
     }
@@ -52,7 +51,6 @@
     .pager {
         label,
         .page-count {
-            color: $color__secondary-text;
             margin-right: 0.5rem;
         }
     }
